--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@ body {
   padding-top: 50px;
 }
 hr{
-  
+  border: 2px solid #2a6866;
+  border-radius: 2px;
 }
 #header{
   transition: 0.5s;
@@ -18,6 +19,53 @@ aside img {
   width: 200px;
   height: auto;
 }
+/* social media links start */
+.fa{
+  color: white;
+  padding: 10px ;
+  font-size: 22px;
+  margin: 0px 5px;
+  width: 48px;
+  height: auto;
+  text-align: center;
+  text-decoration: none;
+  border: 1px solid white;
+  border-radius: 50%;
+}
+
+
+
+
+.fa-facebook:hover{
+  color : #3B5998;
+  border-color: #3B5998;
+
+}
+
+
+.fa-linkedin:hover {
+  color: #007bb5;
+  border-color: #007bb5;
+  
+}
+
+
+.fa-instagram:hover {
+  color: #aa1a90;
+  border-color: #c815a7;
+  
+}
+
+
+.fa-snapchat-ghost:hover {
+  color: #fffc00;
+  border-color: #fffc00;
+  
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+
+
+/* social media links ends */
 
 .darkGreen{
   color:#132C33
@@ -36,7 +84,7 @@ aside img {
   padding-top: 60px;
 }
 
-.sidenav a {
+.sidenav-links a,.closebtn {
   padding: 8px 8px 8px 32px;
   text-decoration: none;
   font-size: 20px;
@@ -45,9 +93,12 @@ aside img {
   transition: 0.5s;
 }
 
-.sidenav div a:hover {
+.sidenav-links a:hover {
   background-color: #3BACB6;
   color: #f1f1f1;
+}
+.closebtn:hover{
+  color: #3BACB6;
 }
 
 
@@ -80,23 +131,13 @@ aside img {
 }
 
 
-
-
-
-
-@media only screen and (max-width: 600px) {
-  
-  
-}
-
-
 /* skills section css starts */
 
 
 ::selection{ 
   /* when selecting some text */
   color: #fff;
-  background: #1d445b;
+  background: #79a7c1;
 }
 
 
@@ -230,3 +271,100 @@ aside img {
 
 /* skill section css ends */
 
+/* footer css */
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
+
+.icons_container{
+  display: inline-flex;
+}
+.icons_container .icon{
+  margin: 0 10px;
+  text-align: center;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  position: relative;
+  z-index: 2;
+  transition: 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+.icons_container .icon span{
+  display: flex;
+  justify-content:center;
+  align-items:center;
+  font-size:19px;
+  height: 50px;
+  width: 50px;
+  background: #fff;
+  border-radius: 50%;
+  position: relative;
+  z-index: 2;
+  box-shadow: 0px 10px 10px rgba(0,0,0,0.1);
+  transition: 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  
+}
+ 
+.icons_container .icon .tooltip{
+  position: absolute;
+  top: 0;
+  z-index: 1;
+  background: #fff;
+  color: #fff;
+  padding: 10px 18px;
+  font-size: 16px;
+  font-weight: 500;
+  border-radius: 10px;
+  opacity: 0;
+  pointer-events: none;
+  box-shadow: 0px 10px 10px rgba(0,0,0,0.1);
+  transition: 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+.icons_container .icon:hover .tooltip{
+  top: 20px;
+  opacity: 1;
+  pointer-events: auto;
+}
+.icon .tooltip:before{
+  position: absolute;
+  content: "";
+  height: 15px;
+  width: 15px;
+  background: #fff;
+  left: 50%;
+  bottom: -6px;
+  transform: translateX(-50%) rotate(45deg);
+  transition: 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+.icons_container .icon:hover span{
+  color: #fff;
+}
+.icons_container .icon:hover span,
+.icons_container .icon:hover .tooltip{
+  text-shadow: 0px -1px 0px rgba(0,0,0,0.4);
+}
+.icons_container .facebook:hover span,
+.icons_container .facebook:hover .tooltip,
+.icons_container .facebook:hover .tooltip:before{
+  background: #3B5999;
+}
+.icons_container .twitter:hover span,
+.icons_container .twitter:hover .tooltip,
+.icons_container .twitter:hover .tooltip:before{
+  background: #46C1F6;
+}
+.icons_container .instagram:hover span,
+.icons_container .instagram:hover .tooltip,
+.icons_container .instagram:hover .tooltip:before{
+  background: #e1306c;
+}
+.icons_container .github:hover span,
+.icons_container .github:hover .tooltip,
+.icons_container .github:hover .tooltip:before{
+  background: #333;
+}
+.icons_container .linkedin:hover span,
+.icons_container .linkedin:hover .tooltip,
+.icons_container .linkedin:hover .tooltip:before{
+  background: #007bb5;
+}
