--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+  background-color: #D8E3E7;
   font-family: Trebuchet MS;
   place-items: center;
   padding-top: 50px;
@@ -13,6 +14,7 @@ hr{
 }
 
 #open{
+  cursor: pointer ;
   transition: 0.5s;
 }
 aside img {
@@ -22,47 +24,24 @@ aside img {
 /* social media links start */
 .fa{
   color: white;
-  padding: 10px ;
+  padding: 8px ;
   font-size: 22px;
   margin: 0px 5px;
-  width: 48px;
+  width:43px;
   height: auto;
   text-align: center;
   text-decoration: none;
   border: 1px solid white;
   border-radius: 50%;
 }
-
-
-
-
-.fa-facebook:hover{
-  color : #3B5998;
-  border-color: #3B5998;
+.fa:hover{
+  color: white;
 
 }
 
 
-.fa-linkedin:hover {
-  color: #007bb5;
-  border-color: #007bb5;
-  
-}
 
 
-.fa-instagram:hover {
-  color: #aa1a90;
-  border-color: #c815a7;
-  
-}
-
-
-.fa-snapchat-ghost:hover {
-  color: #fffc00;
-  border-color: #fffc00;
-  
-  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-}
 
 
 /* social media links ends */
@@ -142,9 +121,9 @@ aside img {
 
 
 .skill-bars{
-  padding: 25px 30px;
+  background-color:#f5f5f5;
+  padding: 25px 50px;
   width: auto;
-  background: #fff;
   box-shadow: 5px 5px 20px rgba(0,0,0,0.2);
   border-radius: 10px;
 }
